Your commit message

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <label for="password">Password</label>
             <input type="password" name="login_password" id="login_password" class="form-control" placeholder="Enter your password">
           </div>
-          <button type="button" id="login" name="login" btn btn-success"">Login</button>
+          <button type="button" id="login" name="login" btn btn-success"" href="https://chhawinder.github.io/HelpRight_feed/">Login</button>
         </div>
         <!-- end col -->
       </form>
